crates/analyzer/tests/snapshots/errors__map_int_type_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `Map` value must be a type
  ┌─ [snippet]:3:23
  │
3 │   let x: Map<address, 100>
  │                       ^^^ expected a type name


